flux/apps/vaultwarden/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-local
  namespace: default
spec:
  entryPoints:
    - local
  routes:
    - match: Host(`vault.home`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-web
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`vault.arlodev.co.uk`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-websecure
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.arlodev.co.uk`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
  tls:
    secretName: cert-vaultwarden
